# mimer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  android-build  mim.sln  mimer.cmake  mimer.sln  platform.h  version.h
MIMProtocol/: CMakeLists.txt  Controller.cpp  Controller.h  MIMErr.h  MIMInt.h  MIMPacket.cpp  MIMPacket.h  MIMProtocol.cpp  MIMProtocol.h  MIMProtocol.pro  MIMProtocol.vcxproj  MQErr.h  Stream.cpp  Stream.h  comdefine.h  main.cpp  memUtil.c  memUtil.h  mimer.pro  test.cpp  timeUtil.h
MIMProtocol/jni/: Android.mk
MQTTProtocol/: CMakeLists.txt  MQTTInt.cpp  MQTTInt.h  MQTTPacket.cpp  MQTTPacket.h  MQTTProtocol.cpp  MQTTProtocol.h  README.md  Stream.cpp  Stream.h  main.cpp  mqtter.pro  test.cpp
connecter/: libuv.cmake
connecter/mmloop_test/: CMakeLists.txt  idle.cpp  main.cpp  mmloop_test.vcxproj
connecter/mmloop_test/Test_udpServer/: udpServer.cpp
connecter/testransmitter/: CMakeLists.txt  client.cpp  main.cpp  server.cpp
connecter/transmitter/: CMakeLists.txt  client.cpp  interface.h  main.cpp  server.cpp  transmitter.cpp  transmitter.h  transmitter.vcxproj
connecter/transmitter/jni/: Android.mk  Application.mk
connecter/transmitter/src/transmitter/: transmitter.cpp  transmitter.h
connecter/transmitter/src/transmitter/jni/: Android.mk  Application.mk
connecter/transmitter/test/: CMakeLists.txt  main.cpp  testransmitter.vcxproj
connecter/uvbase/: CMakeLists.txt  mmloop.cpp  mmloop.h  mmloop_files.cpp  mmloop_net.h  mmloop_utils.cpp  uvbase.vcxproj
connecter/uvbase/jni/: .Android.mk.swp  Android.mk
ellog/: .qmake.stash  CMakeLists.txt  easylogging++.h  ellog.cpp  ellog.h  ellog.pro  ellog.vcxproj  main
ellog/jni/: Android.mk
ellog/test/: CMakeLists.txt  testellog.cpp  testellog.vcxproj
ellog/testroll/: CMakeLists.txt  main.cpp  testroll.vcxproj
jni/: Android.mk
lib/3rdlib/libuv/lib/: libuv.la  libuv.so.1.0.0
lib/3rdlib/libuv/lib/pkgconfig/: libuv.pc
mimer/: CMakeLists.txt  client.cpp  main.cpp  mimer.vcxproj  server.cpp  test.cpp
sqler/: sqler.vcxproj
sqler/mysqler/: CMakeLists.txt  mysqler.cpp  mysqler.h
sqler/mysqler/testsqler/: CMakeLists.txt  main.cpp  testsqler.vcxproj
testMimProt/: CMakeLists.txt  main.cpp  test.cpp  testMimProt.vcxproj
utils/: CMakeLists.txt
utils/loadso/: CMakeLists.txt  Loadso.cpp  Loadso.h  loadso.pro  loadso.vcxproj  main.cpp
utils/stream/: CMakeLists.txt  Stream.cpp  Stream.h  main.cpp
utils/threads/: CMakeLists.txt  SyncErrno.h  SyncTools.cpp  SyncTools.h  SyncTools.pro  SyncType.h  ThreadType.h  main.cpp  threadpool.cpp  threadpool.h  threads.cpp  threads.h  threads.rar  threads.vcxproj  utilException.cpp  utilException.h
utils/verify/: CMakeLists.txt  base64.h  crc.cpp  crc.h  hash.c  hash.h  khash.h  main.cpp  md5.cpp  md5.h  sha1.cpp  sha1.h  verify.h  verify.pro  verify.vcxproj
